style: fix overflow-x in on clock page

--- a/src/pages/Clock/Clock.module.css
+++ b/src/pages/Clock/Clock.module.css
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .sessionItem,
